[package]
name = "bin-pool"
version = "0.1.1"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dragazo/bin-pool"
documentation = "https://docs.rs/bin-pool"
description = """
A small crate for interning binary slices.
"""
